--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body>
     <div class="container">
         <h1>Weather App</h1>
         <div class="container-fluid">
             <label for="city">Enter a City : </label>
             <input type="text" id="cityName">
-            <button onclick="fetchWeather()">Submit</button>
+            <button onclick="fetchWeather()">Search</button>
         </div>
-        <h2 id="result"></h2>
+        <h2 id="temperature"></h2>
+        <h2 id = "weather"></h2>
     </div>
     <script src="apidemo.js"></script>
 </body>
